# mubarak-image-labelling

./: .gitignore  README.md  app.py  google_vision.py  pyproject.toml  requirements.txt  sample.env  text_processing.py
