[tool.poetry]
name = "image-labelling"
version = "0.1.0"
description = ""
authors = ["Fardeem Munir <munirfardeem@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gradio = "3.14.0"
google-cloud-vision = "^3.4.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
